fix: add z-index: 100 to toastui-editor-contents for IE11

--- a/apps/editor/src/css/contents.css
+++ b/apps/editor/src/css/contents.css
@@ -36,6 +36,7 @@ table.ProseMirror-selectednode {
   font-size: 13px;
   font-family: 'Open Sans', 'Helvetica Neue', 'Helvetica', 'Arial', '나눔바른고딕',
     'Nanum Barun Gothic', '맑은고딕', 'Malgun Gothic', sans-serif;
+  z-index: 100;
 }
 
 .toastui-editor-contents *:not(table) {
